# VirtualSurroundApp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: issue.md
include/VirtualSurroundApp/DPLII/: DPLIIVirtualSurroundConsoleApplication.h  DPLIIVirtualSurroundDevice.h  DPLIIVirtualSurroundDriver.h
include/VirtualSurroundApp/DSP/: RMSCalculator.h  RollingSampleBuffer.h
include/VirtualSurroundApp/DSP/Filters/: BiQuadFilter.h  EQFilterCurve.h  Filters.h
include/VirtualSurroundApp/DSP/Transforms/: Delay.h  PhaseRotator.h
include/VirtualSurroundApp/Devices/: AudioDevice.h  AudioDeviceEnumerator.h
src/: CMakeLists.txt  VirtualSurroundAppV2.cpp
src/DPLII/: CMakeLists.txt  DPLIIVirtualSurroundConsoleApplication.cpp  DPLIIVirtualSurroundDevice.cpp  DPLIIVirtualSurroundDriver.cpp
src/DSP/: CMakeLists.txt  RMSCalculator.cpp  RollingSampleBuffer.cpp
src/DSP/Filters/: AllPassFilter.cpp  BiQuadFilter.cpp  CMakeLists.txt  HighPassFilter.cpp  LowPassFilter.cpp
src/DSP/Transforms/: CMakeLists.txt  Delay.cpp  PhaseRotator.cpp
src/Devices/: AudioDevice.cpp  AudioDeviceEnumerator.cpp  CMakeLists.txt
